docs: rewrite current project runbook